src/snapshots/ruff__linter__tests__N805_N805.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: InvalidFirstArgumentNameForMethod
  location:
    row: 5
    column: 20
  end_location:
    row: 5
    column: 24
  fix: ~
- kind: InvalidFirstArgumentNameForMethod
  location:
    row: 10
    column: 30
  end_location:
    row: 10
    column: 34
  fix: ~

