src/snapshots/ruff__linter__tests__N806_N806.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    NonLowercaseVariableInFunction: Camel
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 10
  fix: ~
- kind:
    NonLowercaseVariableInFunction: CONSTANT
  location:
    row: 4
    column: 5
  end_location:
    row: 4
    column: 13
  fix: ~

