src/snapshots/ruff__linter__tests__N806_N806.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  def f():
      lower = 0
|     Camel = 0
|> Variable `Camel` in function should be lowercase
|     CONSTANT = 0
|> Variable `CONSTANT` in function should be lowercase
      _ = 0

