src/snapshots/ruff__linter__tests__N807_N807.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: DunderFunctionName
  location:
    row: 1
    column: 0
  end_location:
    row: 2
    column: 4
  fix: ~

