src/snapshots/ruff__linter__tests__N812_N812.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    LowercaseImportedAsNonLowercase:
<<<<<<< HEAD
      - submod
      - SubMod
=======
      - lowercase
      - Lowercase
>>>>>>> Fix string casing check
  location:
    row: 1
    column: 1
  end_location:
    row: 1
<<<<<<< HEAD
    column: 28
  fix: ~
- kind:
    LowercaseImportedAsNonLowercase:
      - bad
      - Bad
=======
    column: 39
  fix: ~
- kind:
    LowercaseImportedAsNonLowercase:
      - another_lowercase
      - AnotherLowercase
>>>>>>> Fix string casing check
  location:
    row: 2
    column: 1
  end_location:
    row: 2
<<<<<<< HEAD
    column: 27
=======
    column: 54
>>>>>>> Fix string casing check
  fix: ~

