src/snapshots/ruff__linter__tests__N813_N813.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    CamelcaseImportedAsLowercase:
      - SubMod
      - submod
  location:
    row: 1
    column: 1
  end_location:
    row: 1
    column: 28
  fix: ~
- kind:
    CamelcaseImportedAsLowercase:
      - CamelCase
      - camelcase
  location:
    row: 2
    column: 1
  end_location:
    row: 2
    column: 39
  fix: ~
- kind:
    CamelcaseImportedAsLowercase:
      - AnotherCamelCase
      - another_camelcase
  location:
    row: 2
    column: 1
  end_location:
    row: 2
    column: 54
  fix: ~

